.gitignore file to ignore large logo files

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,13 @@ build/
 dist/
 maps/
 
+
 # Build Systems #
 ######################
 gulpfile.js
+
+
+# Build Systems #
+######################
+logos/
 
